Enable native access for SQLite